--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option
-log4j.rootLogger=INFO, file, stdout 
+log4j.rootLogger=INFO, file, stdout, sql 
 
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender  
@@ -14,3 +14,17 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out  
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout  
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n  
+
+
+# Define the database appender
+log4j.appender.sql=org.apache.log4j.jdbc.JDBCAppender
+log4j.appender.sql.URL=jdbc:mysql://localhost:3306/test
+# Set Database Driver
+log4j.appender.sql.driver=com.mysql.cj.jdbc.Driver
+# Set database user name and password
+log4j.appender.sql.user=root
+log4j.appender.sql.password=123456
+# Set the SQL statement to be executed.
+log4j.appender.sql.sql=INSERT INTO LOGS VALUES ('%x', now() ,'%C','%p','%m')
+# Define the xml layout for file appender
+log4j.appender.sql.layout=org.apache.log4j.PatternLayout
