logging in logs table in database

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,9 +1,9 @@
 # Root logger option
-log4j.rootLogger=INFO, file, stdout 
+log4j.rootLogger=INFO, file, stdout, DB 
 
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender  
-log4j.appender.file.File=C:\\Users\\peyma\\Java Pack\\advanced-java-nov2021\\logging.log
+log4j.appender.file.File=C:\\Users\\peyman\\Java Pack\\advanced-java-nov2021\\logging.log
 log4j.appender.file.MaxFileSize=10MB  
 log4j.appender.file.MaxBackupIndex=10  
 log4j.appender.file.layout=org.apache.log4j.PatternLayout  
@@ -14,3 +14,15 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out  
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout  
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n  
+
+# Direct log messages to DB
+log4j.appender.DB=org.apache.log4j.jdbc.JDBCAppender
+log4j.appender.DB.URL=jdbc:mysql://localhost:3306/test
+log4j.appender.DB.user=root
+log4j.appender.DB.password=123456
+log4j.appender.DB.sql=INSERT INTO logs(date, user, message,class) VALUES ('%d{yyyy-MM-dd HH:mm:ss}', '%X{User}','%m','%c')
+log4j.appender.DB.layout=org.apache.log4j.PatternLayout
+log4j.appender.CA.layout.ConversionPattern=INSERT INTO logs (date, user,message,class) VALUES ('%d{yyyy-MM-dd HH:mm:ss}', '%X{User}','%m','%c')
+
+log4j.category.ke.co=info
+log4j.category.ke.co.appender-ref=DB
