--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,14 @@
       <version>1.2.17</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.tomcat</groupId>
+      <artifactId>tomcat-catalina</artifactId>
+      <version>8.0.15</version>
+      <scope>provided</scope>
+    </dependency>
+
+
   </dependencies>
 
 </project>
