--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,7 @@
       <scope>provided</scope>
     </dependency>
 
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.27</version>
-    </dependency>
+
 
 
     <dependency>
@@ -79,6 +75,27 @@
       <artifactId>tomcat-catalina</artifactId>
       <version>8.0.15</version>
       <scope>provided</scope>
+    </dependency>
+
+<!--   Hibernate as ORM -->
+
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>5.6.1.Final</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.27</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.20</version>
     </dependency>
 
 
