--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,8 @@
-username=root
-password=123456
-url=jdbc:mysql://localhost:3306/test
-driver=com.mysql.cj.jdbc.Driver
+jdbc.driverClassName = com.mysql.cj.jdbc.Driver
+jdbc.url = jdbc:mysql://localhost:3306/test?useSSL=false
+jdbc.username = root
+jdbc.password = 123456
+hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+hibernate.show_sql = true
+hibernate.format_sql = true
+hibernate.hbm2ddl.auto = update
