--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,28 +46,28 @@
         </login-config>
 
 
-    <security-constraint>
-        <web-resource-collection>
-            <web-resource-name>Student-View</web-resource-name>
-            <url-pattern>/student-*</url-pattern>
-        </web-resource-collection>
-        <auth-constraint>
-            <role-name>admin</role-name>
-            <role-name>user</role-name>
-        </auth-constraint>
-    </security-constraint>
+<!--    <security-constraint>-->
+<!--        <web-resource-collection>-->
+<!--            <web-resource-name>Student-View</web-resource-name>-->
+<!--            <url-pattern>/student-*</url-pattern>-->
+<!--        </web-resource-collection>-->
+<!--        <auth-constraint>-->
+<!--            <role-name>admin</role-name>-->
+<!--            <role-name>user</role-name>-->
+<!--        </auth-constraint>-->
+<!--    </security-constraint>-->
 
 
-    <security-constraint>
-        <web-resource-collection>
-            <web-resource-name>user</web-resource-name>
-            <url-pattern>/*</url-pattern>
-        </web-resource-collection>
-        <auth-constraint>
-            <role-name>admin</role-name>
-            <role-name>user</role-name>
-        </auth-constraint>
-    </security-constraint>
+<!--    <security-constraint>-->
+<!--        <web-resource-collection>-->
+<!--            <web-resource-name>user</web-resource-name>-->
+<!--            <url-pattern>/*</url-pattern>-->
+<!--        </web-resource-collection>-->
+<!--        <auth-constraint>-->
+<!--            <role-name>admin</role-name>-->
+<!--            <role-name>user</role-name>-->
+<!--        </auth-constraint>-->
+<!--    </security-constraint>-->
 
 
     <security-role>
