adding spring webmvc dependency

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,8 +6,12 @@
 
     <display-name>Archetype Created Web Application</display-name>
     <welcome-file-list>
-        <welcome-file>home.do</welcome-file>
+        <welcome-file>/</welcome-file>
     </welcome-file-list>
+
+
+
+
 
     <servlet>
         <servlet-name>Dummy</servlet-name>
